- okno rozmowy: chmurki z opisem emotikonek w oknie wyboru emotikonki.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@433 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
   dzwiêkowych
 * mo¿liwo¶æ wyboru przegl±darki www w jakiej ma pokazywaæ siê wybrany
   w oknie rozmowy hyperlink
+* okno rozmowy: chmurki z opisem emotikonek w oknie wyboru emotikonki
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
