--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 * mo¿liwo¶æ wyboru przegl±darki www w jakiej ma pokazywaæ siê wybrany
   w oknie rozmowy hyperlink
 * okno rozmowy: chmurki z opisem emotikonek w oknie wyboru emotikonki
+* playSound(): fork() -> QProcess
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
