- uzytkownicy na liscie sa sortowani z uwglednieniem polskich literek.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@436 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
   w oknie rozmowy hyperlink
 * okno rozmowy: chmurki z opisem emotikonek w oknie wyboru emotikonki
 * playSound(): fork() -> QProcess
+* u¿ytkownicy na li¶cie s± sortowani z uwglêdnieniem polskich literek
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
