--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
 * okno rozmowy: chmurki z opisem emotikonek w oknie wyboru emotikonki
 * playSound(): fork() -> QProcess
 * u¿ytkownicy na li¶cie s± sortowani z uwglêdnieniem polskich literek
+* okno informacji o u¿ytkowniku: wydzielenie zak³adek z poszczególnymi opcjami
 * poprawiono wy¶wietlanie emotikonów
 
 +++ wersja 0.3.3-pre1
