- mozliwosc blokowania uzytkownikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@445 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
 * u¿ytkownicy na li¶cie s± sortowani z uwglêdnieniem polskich literek
 * okno informacji o u¿ytkowniku: wydzielenie zak³adek z poszczególnymi opcjami
 * poprawiono wy¶wietlanie emotikonów
+* mo¿liwo¶æ blokowania u¿ytkowników
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
