- mozliwosc ukrycia sie przed uzytkownikami, ktorych mamy na liscie przy statusie   "tylko dla znajomych"
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@451 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@
 * okno informacji o u¿ytkowniku: wydzielenie zak³adek z poszczególnymi opcjami
 * poprawiono wy¶wietlanie emotikonów
 * mo¿liwo¶æ blokowania u¿ytkowników
+* mo¿liwo¶æ ukrycia siê przed u¿ytkownikami, których mamy na li¶cie przy statusie
+  "tylko dla znajomych"
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
