nowe wysylanie smsow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@453 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 * mo¿liwo¶æ blokowania u¿ytkowników
 * mo¿liwo¶æ ukrycia siê przed u¿ytkownikami, których mamy na li¶cie przy statusie
   "tylko dla znajomych"
+* poprawione wysylanie sms-ow (przez bramka.org). znowu dziala idea.
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
