--- a/ChangeLog
+++ b/ChangeLog
@@ -23,7 +23,7 @@
 * mo¿liwo¶æ ukrycia siê przed u¿ytkownikami, których mamy na li¶cie przy statusie
   "tylko dla znajomych"
 * poprawione wysylanie sms-ow (przez bramka.org). znowu dziala idea.
-* wyswietlanie hint'ow przy ikonce w dock'u - experymental
+* wyswietlanie hint'ow przy ikonce w dock'u - experimental
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
