- mozliwosc ignorowania wiadomosci od uzytkownikow spoza listy kontaktow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@459 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
   "tylko dla znajomych"
 * poprawione wysy³anie smsów (przez bramka.org). znowu dzia³a idea.
 * wy¶wietlanie hintów przy ikonce w docku - experimental
+* mo¿liwo¶æ ignorowania wiadomo¶ci od u¿ytkowników spoza listy kontaktów
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
