--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-/** TODO, stan na 15/12/2002. **/
+/** TODO, stan na 26/12/2002. **/
 (TODO mo¿e byæ nieaktualne... zapraszamy na kadu.net/forum)
 
 
@@ -37,6 +37,7 @@
  ? dodaæ wiêcej funkcji do dock menu (szukaj, dodaj, usuñ, odbierz)
  ? rozbudowa opcji ignorowania o blokowanie
  ? autostatus (zmiana z listy co jaki¶ czas)
+ ! dodaæ do pliku AUTHORS sekcjê "Byli autorzy"
 
  
  TODO dla wersji pó¼niejszych
