--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@
 * mo¿liwo¶æ ignorowania wiadomo¶ci od u¿ytkowników spoza listy kontaktów
 * obs³uga zmiennej CONFIG_DIR - funkcja ggPath ogólnego zastosowania do
   konwersji scie¿ek ze wzglêdnych w katalogu gg do bezwzglêdnych
+* u¿ytkownicy anonimowi nie s± dodawani do listy.
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
