--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.3-pre3
+* CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
+  wy¶wietlenie wiadomo¶ci/rozmowy
 
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
