--- a/ChangeLog
+++ b/ChangeLog
@@ -4,11 +4,13 @@
 * szyfrowanie wiadomo¶ci przy u¿yciu OpenSSL (scooty) +
   configure: opcja --with-openssl (ca³o¶æ eksperymentalna)
 * dodanie do kodu domy¶lnych serwerów GG. Kadu ³±czy siê najpierw
-  z hub'em i dostaje ip serwera z którym sie probujemy po³±czyæ
-  je¿eli to siê nie uda. £±czy siê z 217.17.41.85, pó¼niej .84 i .83 na porcie 8074
-  Natomiast gdy uda siê po³±czyæ i z jakies przyczyny po³±czenie zostanie 
-  zerwane lub po prostu osoba sama siê roz³±czy(status: niedostêpny)
+  z hubem, dostaje ip serwera z którym sie próbuje po³±czyæ.
+  Je¿eli to siê nie uda, ³±czy siê z 217.17.41.85, pó¼niej .84 i .83 na porcie 8074
+  Natomiast gdy uda siê po³±czyæ i z jakiej¶ przyczyny po³±czenie zostanie 
+  zerwane lub po prostu osoba sama siê roz³±czy (status: niedostêpny)
   - cykl ³±czenia siê z serwerami GG zaczyna siê od pocz±tku czyli jw.
+* informacja o b³êdzie sieciowym podczas próby wys³ania wiadomo¶ci
+  przy braku po³±czenia z serwerem GG
   
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
