--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,8 @@
   - cykl ³±czenia siê z serwerami GG zaczyna siê od pocz±tku czyli jw.
 * informacja o b³êdzie sieciowym podczas próby wys³ania wiadomo¶ci
   przy braku po³±czenia z serwerem GG
-  
+* ikonka w tray'u powinna sygnalizowaæ wiadomo¶æ do odczytania po restarcie kadu
+
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
 * lepszy selektor emotow - potrafi wystawac za chat
