--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
   przy braku po³±czenia z serwerem GG
 * ikonka w tray'u powinna sygnalizowaæ wiadomo¶æ do odczytania po restarcie kadu
 * u do³u pojawia siê informacja o u¿ytkowniku
+* dostêpno¶æ nowych wersji kadu nie jest sprawdzana, gdy nie mamy przydzielonego
+  numeru GG
 
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
