--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 * u do³u pojawia siê informacja o u¿ytkowniku
 * dostêpno¶æ nowych wersji kadu nie jest sprawdzana, gdy nie mamy przydzielonego
   numeru GG
+* prawid³owe wy¶wietlanie polskich literek w opisach osób niedostêpnych
 
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
