--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Autorzy Kadu:
 
 Tomasz Jarzynka <tomee at cpi dot pl>
-twórca projektu, koordynator, programista, grafik
+twórca projektu, programista, grafik
 
 Tomasz Chiliñski <chilek at chilan dot com>
 programista, opiekun serwera kadu.net
@@ -13,4 +13,4 @@ Dariusz Jagodzik <mast3r at linuxpl dot com>
 programista
 
 Roman Krzystyniak <Krzystyniak dot Roman at Jezus dot pl>
-dokumentacja projektu
+dokumentacja projektu, aktualizacja wersji polskiej
