- po zmianie powiadomien w oknie konfiguracji ustawienia powiadomien sa zapamietywane.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@519 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
   numeru GG
 * prawid³owe wy¶wietlanie polskich literek w opisach osób niedostêpnych
 * poprawka domy¶lnej geometri g³ównego okna
+* po zmianie powiadomieñ w oknie konfiguracji ustawienia powiadomieñ s± zapamiêtywane
 
 +++ wersja 0.3.3-pre2
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
