- przy imporcie listy uzytkownikow ustawiamy domyslne atrybuty uzytkownikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@525 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.3-pre4
+* przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
+
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
   wy¶wietlenie wiadomo¶ci/rozmowy
