- poprawki zwiazane z zarzadzaniem widocznoscia ikony programu w tray'u - jesli ikona programu jest widoczna w tray'u to wiadomosci od uzytkowniow   anonimowych nie powoduja dodawania tych uzytkownikow do listy; w przeciwnym przypadku   uzytkownicy sa dodawani do listy (serwer GG nie jest o tym informowany!)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@526 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 +++ wersja 0.3.3-pre4
 * przy imporcie listy u¿ytkowników ustawiamy domy¶lne atrybuty u¿ytkowników
+* poprawki zwi±zane z zarz±dzaniem widoczno¶ci± ikony programu w tray'u
+* je¶li ikona programu jest widoczna w tray'u to wiadomo¶ci od u¿ytkowniów
+  anonimowych nie powoduj± dodawania tych u¿ytkowników do listy; w przeciwnym przypadku
+  u¿ytkownicy s± dodawani do listy (serwer GG nie jest o tym informowany!)
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
