--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 * je¶li ikona programu jest widoczna w tray'u to wiadomo¶ci od u¿ytkowniów
   anonimowych nie powoduj± dodawania tych u¿ytkowników do listy; w przeciwnym przypadku
   u¿ytkownicy s± dodawani do listy (serwer GG nie jest o tym informowany!)
+* w oknie rozmowy dodano guzik blokuj±cy przewijanie rozmowy (mo¿na spokojnie przeczytaæ
+  co kto¶ do nas napisa³ du¿o wcze¶niej)
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
