--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 * mo¿liwo¶æ rezygnacji ze zmiany statusu na status opisowy
 * usuniête wywalanie siê kadu po otwarciu okna z danymi osobistymi
   (w momencie gdy nie znaleziono informacji o nas w katalogu publicznym)
+* mo¿liwo¶æ regulacji wielko¶ci panela informacyjnego
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
