--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
   (w momencie gdy nie znaleziono informacji o nas w katalogu publicznym)
 * mo¿liwo¶æ regulacji wielko¶ci panela informacyjnego
 * wyszukiwanie u¿ytkowników zgodne z GG 5.0
+* w oknie rozmowy: mo¿na zmieniæ propocjê pomiêdzy rozmiarem okna historii rozmowy,
+  a list± u¿ytkowników (gdy prowadzimy konferencjê)
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
