- dane osobiste: pobieranie o nas informacji wykorzystuje wyszukiwanie zgodne z GG 5.0.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@553 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
 * usprawnienia w oknie poszukiwañ u¿ytkowników:
   - szukanie u¿ytkowników najpierw powoduje wyczyszczenie listy u¿ytkowników,
   - szukanie kolejnych u¿ytkowników nie powoduje dodawania do listy ju¿ wcze¶niej znalezionych.
+* dane osobiste: pobieranie o nas informacji wykorzystuje wyszukiwanie zgodne z GG 5.0
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
