--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@
   - szukanie u¿ytkowników najpierw powoduje wyczyszczenie listy u¿ytkowników,
   - szukanie kolejnych u¿ytkowników nie powoduje dodawania do listy ju¿ wcze¶niej znalezionych.
 * dane osobiste: pobieranie o nas informacji wykorzystuje wyszukiwanie zgodne z GG 5.0
+* dane osobiste: dzia³aj± w standardzie GG 5.0 (nie ma problemów z poszczególnymi polami
+  naszego opisu)
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
