--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ programista, opiekun serwera kadu.net
 Adrian Smarzewski <adrians at aska dot com dot pl>
 programista, twórca wersji polskiej
 
-Dariusz Jagodzik <mast3r at linuxpl dot com>
+Dariusz Jagodzik <mast3r at kadu dot net>
 programista
 
 Roman Krzystyniak <Krzystyniak dot Roman at Jezus dot pl>
