- to co mnie ruszylo przez ostatnie pare dni.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@568 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-/** TODO, stan na 26/12/2002. **/
+/** TODO, stan na 16/01/2003. **/
 (TODO mo¿e byæ nieaktualne... zapraszamy na kadu.net/forum)
 
 
@@ -22,7 +22,9 @@
  ! wyja¶niæ zapêtlenia siê przy utracie ³±czno¶ci z serwerem 
  ! przetestowaæ wysy³anie plików
  + dopracowaæ grupy
-
+ + mo¿liwo¶æ zmiany has³a powi±zanego z numerem GG
+ + mo¿liwo¶æ wyrejestrowania numeru GG
+ + skasowanie wyeksportowanej listy kontaktów na serwerze GG 
 
  TODO dla wersji 0.4.0
 -----------------------
