poprawka szyfrowania - simlite
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@573 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@
 * dane osobiste: dzia³aj± w standardzie GG 5.0 (nie ma problemów z poszczególnymi polami
   naszego opisu)
 * dane osobiste: obs³uga FamilyName i FamilyCity
+* szyfrowanie: gruntowna poprawka - przejscie na simlite z ekg. dziala juz
+  kadu<=>kadu, ale kod wymaga jeszcze troszke pracy
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
