- przypominanie hasla nie blokuje kadu.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@577 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
 * dane osobiste: obs³uga FamilyName i FamilyCity
 * szyfrowanie: gruntowna poprawka - przejscie na simlite z ekg. dziala juz
   kadu<=>kadu, ale kod wymaga jeszcze troszke pracy
+* przypominanie has³a nie blokuje kadu
 
 +++ wersja 0.3.3-pre3
 * CTRL + klik dowolnego przycisku myszki na ikonce w tray'u powoduje
